@@ -7,11 +7,9 @@ DIST deblob-check-2.6.32 247608 RMD160 840bf8a229ea79810519eee6241edb85b78a6562 
 DIST deblob-check-2.6.34 268995 RMD160 0186c8b3ef596feb0be938a7a75da620a7f425b2 SHA1 59f978b9455099c634947638ebf1ce6c82c1aead SHA256 2c995748c14bed50b93746a35a44b33138b2758031e3ef7d0159911cbab83c30
 DIST linux-2.6.32.tar.bz2 64424138 RMD160 b93742cbaf8174f2200d2dbef0d47a26c618039c SHA1 410b4fc818023bfef60064e973ff0ab46d3bfb19 SHA256 5099786d80b8407d98a619df00209c2353517f22d804fdd9533b362adcb4504e
 DIST linux-2.6.34.tar.bz2 67633622 RMD160 dafd721b00c13e3652405b517b379eed10020bf4 SHA1 4188857ba71f301991dc56285f593e9c311e5824 SHA256 fa395fec7de633df1cb85b6248b8f35af98380ed128a8bc465fb48bc4d252633
-DIST patch-2.6.32.20.bz2 566269 RMD160 524c70029c360ec44d9d10663fb5f53383560c0b SHA1 b14cd010943569d81092db72e6c00799b03cdee3 SHA256 d46f29d8e2c3f5f68e074ff6db33ba615486a0994d86f8d03586615e86c0ac52
-DIST patch-2.6.32.21.bz2 580004 RMD160 d617acf07db90e51f6f0d75480f1c9f94bd7898f SHA1 34cdb737eec4a185f5a7ce680eea797a81d50185 SHA256 88e579f74f95ffac30d9d011be98c83e67cf348b9937d2131514a0874bb4413f
+DIST patch-2.6.32.22.bz2 602391 RMD160 1f3b8cbac32a5833d98e89e0f2e7a4cd24fe4996 SHA1 bc2239222fc61e45404bb9db41e9e6e51594a6a1 SHA256 9f04a819a6ae1ac9a4793ce229bc9a2cb095ac10a2d46955ec1e6769283c4de4
 DIST patch-2.6.34.6.bz2 185209 RMD160 75c9a569f8c80be7c418b75f7cde444fcc0a70ff SHA1 e033e2bc4b46e7cc8ee19c07b5ad6999b4c2a52d SHA256 a62e9392ad435948ea4ea2cce12e60e042da6e6da806691936ba50bbaa0dc8cc
-EBUILD calculate-sources-2.6.32.20.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
-EBUILD calculate-sources-2.6.32.21.ebuild 740 RMD160 41c5b51d2aca64a9d139c81da028620216b6ec38 SHA1 0d5f633f6f868e2228c6d2388245e6794a19c6c5 SHA256 87bcd495d71ba3c55c7e6732f843cd0bc3bc14e21227ba011eb3ac2fac769fad
+EBUILD calculate-sources-2.6.32.22.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
 EBUILD calculate-sources-2.6.34.6.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
-MISC ChangeLog 2367 RMD160 ee56cac6df1bdc90ff532bd363a9044cd64bfba3 SHA1 5dec2f30effc38ee086e5755a6d043b01e04509a SHA256 6c78880bdeb78cb08f0f2f0c0b875e7d584573375a94c97dd339fe99e46945df
+MISC ChangeLog 2607 RMD160 4808238ed1bdfc2ab47529a3c22d095e69d009d6 SHA1 6c83c9d4cd94bfdb0852e3fa3bfd8443ebc09e50 SHA256 10ee039fcbf55ef68831cfc29cb8a8c03e027343dd7f30402438d4d687be0364
 MISC metadata.xml 364 RMD160 308abbf758102b5591c353f41a62be6836f98693 SHA1 5029bd7cf897e4eb8f8e8fa935c02d4c73eb59db SHA256 0bee25282d797e432206373a8535689412a3f76f8974315f8ecf73536bf0e505
