@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-sources-2.6.32.22 (21 Sep 2010)
+
+  21 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -calculate-sources-2.6.32.20.ebuild, -calculate-sources-2.6.32.21.ebuild,
+  +calculate-sources-2.6.32.22.ebuild:
+  version bump
+
   09 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
   -calculate-sources-2.6.34.4.ebuild, calculate-sources-2.6.34.6.ebuild:
   Remove old version.
